force-app/main/default/objects/Portal_Survey__c/Portal_Survey__c.object-meta.xml
<CustomObject>
    <label>Portal Survey</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Portal Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>