force-app/main/default/objects/Portal_Survey__c/fields/Dont_Ask_Me_Again__c.field-meta.xml
<CustomField>
    <fullName>Dont_Ask_Me_Again__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the user indicated they do not want to be prompted to complete the survey any more.</inlineHelpText>
    <label>Don&apos;t Ask Me Again</label>
    <type>Checkbox</type>
</CustomField>