force-app/main/default/objects/Portal_Survey__c/fields/Feature_for_Better_Experience__c.field-meta.xml
<CustomField>
    <fullName>Feature_for_Better_Experience__c</fullName>
    <inlineHelpText>Feature/option to make their experience better</inlineHelpText>
    <label>Feature for Better Experience</label>
    <type>TextArea</type>
</CustomField>