force-app/main/default/objects/Portal_Survey__c/fields/Open_to_Providing_Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Providing_Additional_Feedback__c</fullName>
    <description>Open to providing additional feedback?</description>
    <inlineHelpText>Open to providing additional feedback?</inlineHelpText>
    <label>Open to Providing Additional Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>