force-app/main/default/objects/Portal_Survey__c/fields/Rate_Functionality_and_Forms__c.field-meta.xml
<CustomField>
    <fullName>Rate_Functionality_and_Forms__c</fullName>
    <description>Portal user survey question with a rating scale of 1-5.</description>
    <inlineHelpText>How would you rate the functionality and forms? Answer is user&apos;s rating out of 5.</inlineHelpText>
    <label>Rate Functionality and Forms</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>