force-app/main/default/objects/Portal_Survey__c/fields/Rate_Layout_and_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Rate_Layout_and_Navigation__c</fullName>
    <description>How would you rate the layout and navigation?</description>
    <inlineHelpText>How would you rate the layout and navigation? Answer is user&apos;s rating out of 5.</inlineHelpText>
    <label>Rate Layout and Navigation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>