force-app/main/default/objects/Portal_Survey__c/fields/Stopped_User_from_Action__c.field-meta.xml
<CustomField>
    <fullName>Stopped_User_from_Action__c</fullName>
    <inlineHelpText>Stopped the user from taking action</inlineHelpText>
    <label>Stopped User from Action</label>
    <type>TextArea</type>
</CustomField>