force-app/main/default/objects/Portal_Survey__c/fields/Survey_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record related to portal user that completed and sent in the survey</description>
    <label>Survey Completed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Surveys</relationshipLabel>
    <relationshipName>Portal_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>