force-app/main/default/objects/Portal_Survey__c/fields/Thing_Website_Is_Missing__c.field-meta.xml
<CustomField>
    <fullName>Thing_Website_Is_Missing__c</fullName>
    <inlineHelpText>One thing our website is missing?</inlineHelpText>
    <label>Thing Website Is Missing</label>
    <type>TextArea</type>
</CustomField>