force-app/main/default/objects/Portal_Survey__c/fields/Used_Similar_Product_or_Service__c.field-meta.xml
<CustomField>
    <fullName>Used_Similar_Product_or_Service__c</fullName>
    <inlineHelpText>User a similar product or service?</inlineHelpText>
    <label>Used Similar Product or Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>